@@ -19,6 +19,7 @@ Version 7.3. 15 April 2019 - xxx edition
 -Fixed bug having more than 256 text to adventure keyboard words
 -Fixed bug on CPC vertical scrolling
 -Fixed bug redrawing zx80/81 display, with realvideo disabled, and menu char width less than 8
+-Fixed machine names to be completely right: for example, "Spectrum 48k" becomes "ZX Spectrum 48k", etc
 
 
 Version 7.2. 10 April 2019 - Neula edition
